# Chase-Pyndiah-demo

./: CMakeLists.txt  CP_parameter_opt.py  CPwrapper.cpp  EvaluateNN.py  NNBCH.py  NNBCHtry.cpp  README.md  SISOsim.cpp  bch_nn_model.pt  bch_nn_weights_small_p5.txt  bch_nn_weights_small_p6.txt  bch_python.cpp  run_single_job.sh  simulation.cpp  simulation.h
Gmatrices/even/: 1023_1.txt  1023_2.txt  1023_3.txt  1023_4.txt  127_1.txt  127_2.txt  127_3.txt  127_4.txt  2047_1.txt  2047_2.txt  2047_3.txt  2047_4.txt  255_1.txt  255_2.txt  255_3.txt  255_4.txt  31_1.txt  31_2.txt  31_3.txt  31_4.txt  511_1.txt  511_2.txt  511_3.txt  511_4.txt  63_1.txt  63_2.txt  63_3.txt  63_4.txt
Gmatrices/extended/: 1024_1.txt  1024_2.txt  1024_3.txt  1024_4.txt  1025_1.txt  1025_2.txt  1025_3.txt  1025_4.txt  128_1.txt  128_2.txt  128_3.txt  128_4.txt  129_1.txt  129_2.txt  129_3.txt  129_4.txt  2048_1.txt  2048_2.txt  2048_3.txt  2048_4.txt  2049_1.txt  2049_2.txt  2049_3.txt  2049_4.txt  256_1.txt  256_2.txt  256_3.txt  256_4.txt  257_1.txt  257_2.txt  257_3.txt  257_4.txt  32_1.txt  32_2.txt  32_3.txt  32_4.txt  33_1.txt  33_2.txt  33_3.txt  33_4.txt  (+16 more)
Gmatrices/primitive/: 1023_1.txt  1023_2.txt  1023_3.txt  1023_4.txt  127_1.txt  127_2.txt  127_3.txt  127_4.txt  2047_1.txt  2047_2.txt  2047_3.txt  2047_4.txt  255_1.txt  255_2.txt  255_3.txt  255_4.txt  31_1.txt  31_2.txt  31_3.txt  31_4.txt  511_1.txt  511_2.txt  511_3.txt  511_4.txt  63_1.txt  63_2.txt  63_3.txt  63_4.txt
RecordedParameters/: p5I4  p6I4
lib/: BCH.cpp  BCH.h  GF_N.cpp  GF_N.h  GPC.cpp  GPC.h  SimpleNN.h  helpers.h  productCode.h  staircaseCode.h
